--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
 <div class="container">
-    <img src="C:\Users\Axel García\Downloads\FotoMia.jpg" alt="Axel Manuel">
+    <img src="FotoMia.jpg" alt="Axel Manuel">
     <h1>Axel Manuel Garcia Lopez</h1>
     <h2>Profesional Técnico Bachillerato en Informática</h2>
     <table>
